--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,6 +1,5 @@
 #content{
   display: flex;
-  align-items: center;
   >div{
     >p:first-child{
       font-size:40pt;
@@ -15,6 +14,20 @@
       padding-left: 16px;
       display:grid;
       grid-template-columns: 35% 35%;
+      li{
+        text-align: justify;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #content{
+    div{
+      ul{
+        display:flex;
+        flex-direction: column;
+      }
     }
   }
 }
