--- a/src/pages/Extras/Extras.scss
+++ b/src/pages/Extras/Extras.scss
@@ -1,4 +1,10 @@
+#content{
+  justify-content: center;
+  align-items: center;
+}
 #bouncing-box{
   display:block;
   border: 1px solid black;
+  height:80%;
+  width:80%;
 }
