--- a/src/pages/Skills/Skills.scss
+++ b/src/pages/Skills/Skills.scss
@@ -1,6 +1,7 @@
 #skills{
 
   width:100%;
+  padding:0 4vw;
   >div{
     margin:5% 0;
     width:100%;
@@ -8,20 +9,20 @@
       width:100%;
       display:grid;
       column-gap: 2%;
-      grid-template-columns: repeat(6, calc(100% / 6.65));
+      grid-template-columns: repeat(5, calc(100% / 5 - 1.5%));
     }
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
   #skills{
     >div{
       >div{
-        width:100%;
         display:flex;
         flex-wrap: wrap;
-        >div{
-          flex:0 1 150px;
+        justify-content: center;
+        >.skill-card{
+          flex:0 1 145px;
         }
       }
     }
